[gd_scene load_steps=0 format=3 uid="uid://rbdxmvum81rx"]

[ext_resource type="Script" uid="uid://wto12m52ef7m" path="res://scripts/sign.gd" id="1_8yyji"]
[ext_resource type="Texture2D" uid="uid://br61mgvqklbqk" path="res://assets/sign.png" id="2_ge2pc"]
[ext_resource type="Texture2D" uid="uid://bfpek641s713w" path="res://assets/tileset/Dialog.png" id="3_qkam6"]
[ext_resource type="Texture2D" uid="uid://cy48t0jq4nmc0" path="res://assets/tileset/IMG_8647.png" id="4_ge2pc"]

[sub_resource type="Animation" id="Animation_pnnkw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5.684342e-14, -97)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4irdt"]
resource_name = "show_dialog"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5.684342e-14, -97), Vector2(-5.684342e-14, -161)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mifvb"]
_data = {
&"RESET": SubResource("Animation_pnnkw"),
&"show_dialog": SubResource("Animation_4irdt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ng4at"]
size = Vector2(112, 104)

[node name="Sign" type="Area2D" unique_id=1684161716]
collision_mask = 2
script = ExtResource("1_8yyji")

[node name="Sign" type="Sprite2D" parent="." unique_id=876067214]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ge2pc")

[node name="DialogSprite" type="Sprite2D" parent="." unique_id=125649085]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(-5.684342e-14, -97)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_qkam6")

[node name="DialogLabel" type="Label" parent="DialogSprite" unique_id=469384928]
offset_left = -307.49997
offset_top = -214.99998
offset_right = 357.4999
offset_bottom = 202.49995
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Dialog text"
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1281091437]
libraries/ = SubResource("AnimationLibrary_mifvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=89764962]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ng4at")

[node name="Mark" type="Sprite2D" parent="." unique_id=760537480]
position = Vector2(0, -150)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ge2pc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
